// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`setTypeName defaults to the filename passed, with stripped extension and postfixed \`T\` 1`] = `
"// @flow
export type configT = {\\"name\\": string}"
`;

exports[`setTypeName uses the user defined type name if passed 1`] = `
"// @flow
export type stupidName = {\\"name\\": string}"
`;

exports[`toFlow transforms json as expected 1`] = `
"{
  \\"name\\": string,
}"
`;
